# Forklift_not_working

./: README.md
basic_mobile_robot/models/: basic_mobile_bot_v2.urdf
basic_mobile_robot/models/basic_mobile_bot_description/: model.sdf
basic_mobile_robot/params/: nav2_params.yaml
basic_mobile_robot/worlds/basic_mobile_bot_world/: smalltown.world
basic_mobile_robot3/: CMakeLists.txt  package.xml
basic_mobile_robot3/config/: prismatic_joint_controller.yaml
basic_mobile_robot3/launch/: basic_mobile_bot_v5.launch.py
basic_mobile_robot3/models/: basic_mobile_bot_v2.urdf
basic_mobile_robot3/models/basic_mobile_bot_description/: model.sdf
basic_mobile_robot3/params/: nav2_params.yaml
basic_robot_sim/: forklift_robot.gv  frames_2024-01-26_23.04.05.gv
forklift_control/: CMakeLists.txt  package.xml
forklift_control/scripts/: robot_control.py
forklift_description/: CMakeLists.txt  package.xml
forklift_gazebo/: CMakeLists.txt  package.xml
forklift_gazebo/launch/: yolobot_launch.py
forklift_recognition/: CMakeLists.txt  package.xml
forklift_recognition/launch/: launch_yolov8.launch.py
forklift_recognition/scripts/: yolov8_ros2_pt.py
forklift_robot_description/: CMakeLists.txt  package.xml
forklift_robot_description/models/: forklift_robot.urdf
forklift_robot_description/models/forklift_description/: model.config  model.sdf
forklift_robot_description/urdf/: my_Sdf.sdf
forklift_robot_description/worlds/forklift_robot_description/: smalltown.world
yolov8_forklift_msgs/: CMakeLists.txt  package.xml
(+6 files in other folders)
