<?xml version="1.0"?>
<package format="3">
  <name>forklift_robot_description</name>
  <version>0.0.1</version>
  <description>3D model of a simple forklift</description>
  <maintainer email="renan028@gmail.com">Renan Freitas</maintainer>
  <license>Apache 2.0</license>
  <author email="renan028@gmail.com">Renan Freitas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

